--- a/src/assets/Pages/Catalog-item/Catalog-item.scss
+++ b/src/assets/Pages/Catalog-item/Catalog-item.scss
@@ -6,7 +6,8 @@
   text-align: center;
   img{
     margin-bottom: 30px;
-    width: max-content;
+    max-width: max-content;
+    width: 100%;
   }
 }
 .container-direction{
