--- a/src/assets/components/Search/Search.scss
+++ b/src/assets/components/Search/Search.scss
@@ -19,7 +19,7 @@
     padding: 0px 30px;
     flex-shrink: 0;
     justify-content: space-between;
-    color: #61dafb;
+    color: black;
   }
   input:not(:focus) {
     opacity: 0;
@@ -31,7 +31,7 @@
   right: 10px;
   border: 1px solid white;
   opacity: 1;
-  background-color: #36720e;
+  background-color: black;
   top: -4px;
 }
 
