--- a/src/assets/Pages/SearchPage/SearchPage.scss
+++ b/src/assets/Pages/SearchPage/SearchPage.scss
@@ -24,3 +24,11 @@
     margin-right: 20px;
   }
 }
+@media (max-width: 567px) {
+  .search-item{
+    flex-direction: column;
+  }
+  .search-item img{
+    width: 100%;
+  }
+}
