--- a/src/assets/components/FullScreenSwiper/FullScreenSwiper.scss
+++ b/src/assets/components/FullScreenSwiper/FullScreenSwiper.scss
@@ -23,3 +23,12 @@
   background: rgba(0, 0, 0, 0.4);
   z-index: 2;
 }
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  color: white;
+}
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  color: white;
+}
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  background: white;
+}
