--- a/src/assets/components/Header/Header.scss
+++ b/src/assets/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header{
-  background-color: #36720e;
+  background-color: black;
   box-shadow: 0px 7px 16px 0px rgba(0, 0, 0, 0.25);
   .container-wrap{
     display: flex;
@@ -22,5 +22,13 @@
     a{
       margin-right: 30px;
     }
+  }
+}
+@media (max-width: 567px) {
+  .header__right{
+    flex-direction: column;
+  }
+  .header__right a{
+    margin-right: 0;
   }
 }
